# Note that in maintenance branches, all build dependencies should
# have an upper bound equal to the most recent already-released version
# of the dependency. This to prevent that a future backwards-incompatible
# release will break the source build of a PyWavelets release.
# Do accept micro (bug-fix) releases.

[build-system]
build-backend = "mesonpep517.buildapi"
requires = [
    "mesonpep517",
    "ninja",
    "Cython>=0.29.18",

    # NumPy dependencies - to update these, sync from
    # https://github.com/scipy/oldest-supported-numpy/, and then
    # update minimum version to match our install_requires min version
    # ----------------------------------------------------------------

    # numpy 1.19 was the first minor release to provide aarch64 wheels, but
    # wheels require fixes contained in numpy 1.19.2
    "numpy==1.19.2; python_version=='3.6' and platform_machine=='aarch64'",
    "numpy==1.19.2; python_version=='3.7' and platform_machine=='aarch64'",

    # default numpy requirements
    "numpy==1.16.5; python_version=='3.6' and platform_machine!='aarch64' and platform_python_implementation != 'PyPy'",
    "numpy==1.16.5; python_version=='3.7' and platform_machine!='aarch64' and platform_python_implementation != 'PyPy'",
    "numpy==1.17.3; python_version=='3.8' and platform_machine!='aarch64' and platform_python_implementation != 'PyPy'",
    "numpy==1.19.3; python_version=='3.9' and platform_python_implementation != 'PyPy'",

    # First PyPy versions for which there are numpy wheels
    "numpy==1.19.0; python_version=='3.6' and platform_python_implementation=='PyPy'",
    "numpy==1.20.0; python_version=='3.7' and platform_python_implementation=='PyPy'",

    # For Python versions which aren't yet officially supported,
    # we specify an unpinned NumPy which allows source distributions
    # to be used and allows wheels to be used as soon as they
    # become available.
    "numpy; python_version>='3.10'",
    "numpy; python_version>='3.8' and platform_python_implementation=='PyPy'",
]


[tool.mesonpep517.metadata]
author = "The PyWavelets Developers"
author-email = "pywavelets@googlegroups.com"
home-page = "https://github.com/PyWavelets/pywt"
project-urls = [
    "Source, https://github.com/PyWavelets/pywt",
    "Documentation, https://pywavelets.readthedocs.io/",
]
summary = "PyWavelets, wavelet transform module"
description="README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
platforms = ["Windows", "Linux", "Solaris", "Mac OS-X", "Unix"]
module = "PyWavelets"
